new commit, made these fixes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,4 +11,4 @@ DISPUTE_RESOLUTION_ADDRESS=0x...
 INSURANCE_POOL_ADDRESS=0x...
 
 # Database
-DATABASE_URL=postgres://user:password@localhost:5432/agentguard
+DATABASE_URL=mongodb://user:password@localhost:5432/agentguard
