--- a/contract/foundry.toml
+++ b/contract/foundry.toml
@@ -3,4 +3,8 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[rpc_endpoints]
+base-sepolia = "https://sepolia.base.org"
+
+[etherscan]
+base-sepolia = { key = "${ETHERSCAN_API_KEY}", url = "https://api-sepolia.basescan.org/api" }
