new changes that were made now are for cool stuff

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,14 +1,48 @@
 PORT=3001
-RPC_URL=your_alchemy_or_infura_url
-PRIVATE_KEY=your_arbitrator_private_key
-LLM_API_KEY=your_llm_api_key
+NODE_ENV=development
 
-# Contract Addresses
-AGENT_REGISTRY_ADDRESS=0x...
-REPUTATION_BOND_ADDRESS=0x...
-ESCROW_PAYMENT_ADDRESS=0x...
-DISPUTE_RESOLUTION_ADDRESS=0x...
-INSURANCE_POOL_ADDRESS=0x...
+# Blockchain
+RPC_URL=https://sepolia.base.org
+PRIVATE_KEY=your_private_key_here
 
-# Database
-DATABASE_URL=mongodb://user:password@localhost:5432/agentguard
+# Contract Addresses (Base Sepolia)
+AGENT_REGISTRY_ADDRESS=0x0244c18f9e9ca059960a9e6333b00bc34e917d92
+REPUTATION_BOND_ADDRESS=0x0e7a0e6ba48d9e1fd30362f4f2c900cff258c893
+ESCROW_PAYMENT_ADDRESS=0xd33447e97ae6fb33eef5591384dc46dbdba5a5cd
+DISPUTE_RESOLUTION_ADDRESS=0x906b2ccb90debbbbd542f07e7efa2c8e22cd6d50
+INSURANCE_POOL_ADDRESS=0x11f86a1d8aff86e80cbf65878809f34a2c3c9694
+
+# Database (MongoDB)
+# Format: mongodb+srv://<user>:<password>@cluster.mongodb.net/dbname
+DATABASE_URL=mongodb://localhost:27017/agentguard
+
+# Authentication
+REFRESH_TOKEN=super_secret_jwt_key_here_at_least_32_chars
+ACCES_TOKEN=super_secret_jwt_key_here_at_least_32_chars
+CORS_ORIGIN=*
+
+JWT_EXPIRES_IN=30m
+JWT_REFRESH_EXPIRES_IN=5d
+
+BCRYPT_SALT_ROUNDS=10
+
+RATE_LIMIT_WINDOW_MS=15 * 60 * 1000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# AI Service (Google Gemini)
+GEMINI_API_KEY=your_google_gemini_api_key
+
+# Caching (Redis)
+REDIS_URL=redis://localhost:6379
+
+# Email Service (SMTP)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASS=your_app_specific_password
+SMTP_FROM="AgentGuard <no-reply@agentguard.com>"
+
+# Storage (IPFS / Pinata)
+PINATA_API_KEY=your_pinata_api_key
+PINATA_SECRET_KEY=your_pinata_secret_key
+IPFS_GATEWAY=https://gateway.pinata.cloud/ipfs/
