--- a/frontend/website/package.json
+++ b/frontend/website/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@tanstack/react-query": "^5.62.7",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.468.0",
     "next": "16.0.0",
     "react": "19.2.0",
