--- a/frontend/website/package.json
+++ b/frontend/website/package.json
@@ -17,7 +17,7 @@
     "framer-motion": "^11.15.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.468.0",
-    "next": "16.0.0",
+    "next": "16.1.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^2.5.5",
@@ -29,8 +29,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.14",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0",
+    "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
